Real time communication done

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,9 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </head>
-
+<!-- Add the Google Maps API script here -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places,directions" async
+  defer></script> -->
 
 <body>
   <div id="root"></div>
